remove default ip address

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="col-md-8 order-md-1">
             <div class="mb-3">
                 <label for="host">Main address</label>
-                <input type="text" class="form-control" id="host" value="http://192.168.5.244" placeholder="http://192.168.0.100">
+                <input type="text" class="form-control" id="host" placeholder="http://192.168.0.100">
             </div>
 
             <hr class="mb-4">
