remove content security policy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>ESPEasy Relay Tester</title>
     <meta name="description" content="">
     <meta name="author" content="Szymon Bluma">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
@@ -115,9 +114,7 @@
     <footer class="my-5 pt-5 text-muted text-center text-small">
         <p class="mb-1">&copy; 2020 Szymon [blumanos] Bluma</p>
         <ul class="list-inline">
-            <li class="list-inline-item"><a href="#">Privacy</a></li>
-            <li class="list-inline-item"><a href="#">Terms</a></li>
-            <li class="list-inline-item"><a href="#">Support</a></li>
+            <li class="list-inline-item"><a href="https://github.com/bluemanos/espeasy-relay-tester">GitHub Repo</a></li>
         </ul>
     </footer>
 </div>
